--- a/css/style.css
+++ b/css/style.css
@@ -76,12 +76,19 @@ main {
     width: 750px;
     height: 750px;
     margin: auto;
+    position: relative;
 }
 
 .container_box::after {
     content: " ";
     display: table;
     clear: both;
+}
+
+.intro {
+    /* font-size: 38px; */
+    text-align: center;
+    line-height: 750px;
 }
 
 .box {
@@ -116,9 +123,22 @@ main {
     background-color: red;
 }
 
+.end_text {
+    width: 100%;
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+    color: white;
+    background: rgba(0, 0, 0, 0.8);
+    padding: 20px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
 /* *****FOOTER***** */
 footer {
-    height: 60px;
+    height: 50px;
     background-color: #fffeff;
 }
 
