--- a/css/style.css
+++ b/css/style.css
@@ -131,15 +131,19 @@ main {
 /* classe messaggio di fine partita */
 .end_text {
     width: 100%;
-    height: 100%;
-    line-height: 750px;
     font-size: 24px;
     font-weight: bold;
     text-align: center;
     color: white;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.8);
     padding: 20px;
     position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.disable {
+    pointer-events: none;
 }
 
 /* *****FOOTER***** */
